--- a/front_end/tokenauth_poc/src/App.css
+++ b/front_end/tokenauth_poc/src/App.css
@@ -13,15 +13,22 @@
     animation: App-logo-spin infinite 20s linear;
   }
 }
-
+@font-face {
+  font-family: "DS-DIGIB";
+  src: local("DS-DIGIB"),
+  url(./fonts/DS-DIGIB.TTF)
+  format("truetype");
+}
 .App-header {
-  background-color: #282c34;
+  font-family: "DS-DIGIB";
+  background-color: hsl(96, 90%, 31%);
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: rgb(14, 15, 14);
+  position: relative;
 }
 
 .App-link {
